--- a/index.html
+++ b/index.html
@@ -31,20 +31,15 @@
         </a-entity>
 
         <a-entity id="left-hand" 
-                  oculus-touch-controls="hand: left" 
-                  vive-controls="hand: left" 
                   hand-controls="hand: left"
-                  dynamic-body="shape: box; mass: 1" shield>
+                  static-body="shape: box" shield>
             <a-box color="#393736" width="0.4" height="0.6" depth="0.05" position="0.05 0.05 -0.1"></a-box>
         </a-entity>
 
         <a-entity id="right-hand" 
-                  hand-controls="hand: right"
                   laser-controls="hand: right" 
                   raycaster="objects: .clickable; far: 5" 
-                  oculus-touch-controls="hand: right" 
-                  vive-controls="hand: right" 
-                  dynamic-body="shape: box; mass: 1" sword>
+                  static-body="shape: box" sword>
             <a-box color="#A94442" width="0.05" height="0.05" depth="0.15" position="0 0 0.075" rotation="90 0 0"></a-box>
             <a-cylinder color="#EEEEEE" radius="0.02" height="1.0" position="0 0.5 0.075" rotation="90 0 0"></a-cylinder>
         </a-entity>
