--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         
         <a-entity camera look-controls wasd-controls 
                   position="0 1.6 0" 
-                  id="player-camera"
-                  kinematic-body="shape: box; halfExtents: 0.3 0.9 0.3" 
-                  geometry="primitive: box; height: 1.8; width: 0.6; depth: 0.6; visible: false">
+                  id="player-camera">
             
             <a-entity position="0 0.2 -1.5" text="value: HP: 3; color: white; align: center" id="hp-text"></a-entity>
             <a-entity position="0 0.0 -1.5" text="value: SCORE: 0; color: white; align: center" id="score-text"></a-entity>
