--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 
             <!-- リスタートボタン (初期は非表示) -->
             <a-entity id="restart-button" position="0 -0.8 0.1" visible="false">
-                <a-plane id="restart-click-target" class="clickable" width="2" height="0.6" color="#228822"></a-plane>
+                <a-plane id="restart-click-target" class="clickable" width="2" height="0.6" color="#228822"
+                         animation__mouseenter="property: scale; to: 1.1 1.1 1.1; dur: 100; startEvents: mouseenter"
+                         animation__mouseleave="property: scale; to: 1 1 1; dur: 100; startEvents: mouseleave"></a-plane>
                 <a-text value="RESTART" align="center" position="0 0 0.01" scale="2 2 2"></a-text>
             </a-entity>
         </a-entity>
